[package]
name = "zfs_promexporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
prometheus = "0.13.3"
libzetta = "0.3.1"
log = "0.4"
fern = "0.6.1"
chrono = "0.4.23"
clap = { version = "4.0.23", features = [ "derive" ] }
